--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Generate and verify certificates with Certificate4You. Create professional certificates for completion, achievement, and more. Verify certificates online."
     />
+    <meta name="keywords" content="generate certificate, verify certificate, certificate generator, certificate verification, online certificate" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Certificate4You: Generate and Verify Certificates</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
